--- a/src/main/webapp/resources/kdy/css/list.css
+++ b/src/main/webapp/resources/kdy/css/list.css
@@ -1,4 +1,33 @@
-
+.file_box .upload-name {
+    display: inline-block;
+    height: 40px;
+    padding: 0 10px;
+    vertical-align: middle;
+    border: 1px solid #dddddd;
+    width: 78%;
+    color: #999999;
+  }
+  
+  .filebox label {
+    display: inline-block;
+    padding: 10px 20px;
+    color: #fff;
+    vertical-align: middle;
+    background-color: #999999;
+    cursor: pointer;
+    height: 40px;
+    margin-left: 10px;
+  }
+  
+  .file_box input[type="file"] {
+    position: absolute;
+    width: 0;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+  }
+  
 .realMain{
     
     background-color: rgb(235, 235, 235);
