--- a/src/main/webapp/resources/kdy/css/styles.css
+++ b/src/main/webapp/resources/kdy/css/styles.css
@@ -81,6 +81,11 @@
     margin-top: 130px;
 }
 
+#allf{
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
