--- a/src/main/webapp/resources/css/imageModal.css
+++ b/src/main/webapp/resources/css/imageModal.css
@@ -10,7 +10,11 @@
 
 #modal_size{
     display: flex;
+    /* flex 아이템의 주축 설정 */
     flex-direction: column;
+    /* 주 축의 정렬을 가운데로 */
+    contain: content;
+    vertical-align: auto;
     justify-content: center;
     align-items: center;
     width: 100%;
