--- a/src/main/webapp/resources/kdy/css/list.css
+++ b/src/main/webapp/resources/kdy/css/list.css
@@ -30,7 +30,7 @@
   
 .realMain{
     
-    background-color: rgb(235, 235, 235);
+    background-color: #fff;
 }
 .shop_list:hover{
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;}
