--- a/src/main/webapp/resources/kdy/css/styles.css
+++ b/src/main/webapp/resources/kdy/css/styles.css
@@ -86,6 +86,19 @@
   height: 100%;
 }
 
+.mainList{
+    height: 90px;
+    font-weight: bold;
+    font-size: 35px;
+    margin: 0px auto 0px auto;
+    text-align: center;
+    line-height: 100px;
+}
+
+#hitList{
+  height: 150px;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
