--- a/src/main/webapp/resources/hjs/css/imageModal.css
+++ b/src/main/webapp/resources/hjs/css/imageModal.css
@@ -10,9 +10,7 @@
 
 #modal_size{
     display: flex;
-    /* flex 아이템의 주축 설정 */
     flex-direction: column;
-    /* 주 축의 정렬을 가운데로 */
     contain: content;
     vertical-align: auto;
     justify-content: center;
@@ -22,3 +20,27 @@
     margin: 20px auto;
 }
 
+/* #modal_size{
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: auto;
+    vertical-align: auto;
+    margin: 0;
+    padding: 0;
+} */
+
+#c1{
+    width: 240px;
+    height: auto;
+    margin: 0;
+    padding: 0;
+}
+
+#mb{
+    display: flex;
+    width: 240px;
+    height: auto;
+    margin: 0;
+    padding: 0;
+}
