--- a/src/main/webapp/resources/hjs/css/imageModal.css
+++ b/src/main/webapp/resources/hjs/css/imageModal.css
@@ -15,8 +15,8 @@
     vertical-align: auto;
     justify-content: center;
     align-items: center;
-    width: 750px;
-    height: auto;
+    width: 600px;
+    height: 600px;
     margin: 20px auto;
 }
 
@@ -30,17 +30,14 @@
     padding: 0;
 } */
 
+/* 모달에 나오는 이미지 ID */
 #c1{
-    width: 240px;
-    height: auto;
-    margin: 0;
-    padding: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  
 }
 
 #mb{
     display: flex;
-    width: 240px;
-    height: auto;
-    margin: 0;
-    padding: 0;
 }
