--- a/src/main/webapp/resources/kdy/css/index.css
+++ b/src/main/webapp/resources/kdy/css/index.css
@@ -95,3 +95,7 @@ img{
 .pagination a {
     transition: background-color .3s;
   }
+
+  .card:hover{
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
