--- a/src/main/webapp/resources/kdy/css/list.css
+++ b/src/main/webapp/resources/kdy/css/list.css
@@ -32,7 +32,7 @@
     
     background-color: #fff;
 }
-.shop_list:hover{
+.shop_list:hover, .party_list:hover{
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;}
 
 .c1{
