--- a/src/main/webapp/resources/kdy/css/detail.css
+++ b/src/main/webapp/resources/kdy/css/detail.css
@@ -21,6 +21,9 @@ button {
 .carousel-item{
     height: 350px;
 }
+.reviews_list:hover{
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
 
 
 #address, #phone, #priceAvg, #delivery, #menuDelete{
