--- a/src/main/webapp/resources/hjs/css/reviewsButton.css
+++ b/src/main/webapp/resources/hjs/css/reviewsButton.css
@@ -1,9 +1,10 @@
 /* reviewsButton.css */
 
-#plus{
+/* #plus{
     justify-content: center;
-}
+} */
 
 #minus {
     float: right;
+    justify-content: right;
 }
